@@ -7,3 +7,4 @@ anarchism - totalitarianism
 conservatism - radicalism
 capitalism - communism
 ecologism - anthropocentrism
+magicism - anti-magicism
