@@ -1845,7 +1845,7 @@ femaleslave
 			"\"Thank Silva I don't have to gather bananas!\"",
 			"\"My sister got a promotion last year. I've heard she is now a very successful slave in the Cathedral of Attnam. I am so jealous!\"",
 			"\"Palm leaves are good for health. Mr. Decos loves their smell.\"",
-			"\"When I was a highly educated doctor in independent Tweraif, I didn't have to I wear stupid bikinis all day long.\"";
+			"\"When I was a highly educated doctor in independent Tweraif, I didn't have to wear stupid bikinis all day long.\"";
 		}
 	}
 }
@@ -3090,11 +3090,11 @@ elder
 	{
 		9,
 		"\"So you're leaving? The stars tell me you will fight glorious battles, meet interesting people, find out suprising things and eventually die a violent death. But good luck anyway.\"",
-		"\"I remember still clearly when we first found in the jungle. You were five and had seemingly been raised by a family of two male hippos.\"",
+		"\"I remember still clearly when we first found you in the jungle. You were five and had seemingly been raised by a family of two male hippos.\"",
 		"\"Even though you have lived here, you are somehow different from the Tweraifians, I can sense it. Is it your aggressive and wild character or your stupidity that separates us? Or is it just that your skin is white and our black?\"",
 		"\"Not long ago Tweraif was a civilization advanced beyound your comprehension. But we were pacifists and could not repulse Attnam's grunt army.\"",
 		"@Dd seems very melancholic. \"I was the head chancellor of the University of Tweraif before the invasion...\"",
-		"\"For a decade I served this Decos lad as a banana grower like everyone else, but then an elephant stepped on my toe and my leg was amputated. I could climb trees no more so they made me a tourist guide.\"",
+		"\"For a decade I served this Decos lad as a banana grower like everyone else, but then an elephant stepped on my toe and my leg was amputated. I couldn't climb trees anymore so they made me a tourist guide.\"",
 		"\"According to old knowledge ostriches were once kings of the sky. Their divine perception, seven feet wings and almost supernatural speed were envied by men and gods alike. Then one of them discovered levitation and soon they all became lazy and eventually dropped their wings.\"",
 		"\"Previously we could use donkeys to carry the bananas. Then one day Attnamians tested a fierce magical bomb nearby. All the asses mutated horribly and started attacking us. The donkeys, I mean, not the colonists.\"",
 		"\"The government of Attnam is led by the high priest of Valpurus, the Great Frog who carries the world. When I was young, Petrus assumed this position by killing the former high priest.\"";
